# cmps361-term_project

./: .clang-format  .gitignore  Assem.cpp  Assembler.cpp  Assembler.h  CMakeLists.txt  Emulator.cpp  Emulator.h  Errors.h  FileAccess.cpp  FileAccess.h  HelperFunctions.cpp  HelperFunctions.h  Instruction.cpp  Instruction.h  InstructionDefinitions.h  NumericInstruction.cpp  NumericInstruction.h  README.md  SymTab.cpp  SymTab.h  SymbolTable.cpp  SymbolicInstruction.cpp  SymbolicInstruction.h  cmps361-term_project.sln  cmps361-term_project.vcxproj  cmps361-term_project.vcxproj.filters  factorial.txt  main.cpp  memory.cpp  memory.h  stdafx.h  test.txt  test_input.txt  vc1620.cpp  vc1620.h
.devcontainer/: devcontainer.json
assembler/: assembler.vcxproj  assembler.vcxproj.filters
assembler_lib/: Assembler.cpp  Assembler.h  CMakeLists.txt  Emulator.cpp  Emulator.h  Errors.cpp  Errors.h  Exceptions.h  FileAccess.cpp  FileAccess.h  HelperFunctions.cpp  HelperFunctions.h  InstructionDefinitions.h  NumericInstruction.cpp  NumericInstruction.h  SymbolTable.cpp  SymbolTable.h  SymbolicInstruction.cpp  SymbolicInstruction.h
evaluation/: Additional notes on term project.eml  Term Project.eml
review/: Term Project (Beta Submission).eml
scripts/: add_argument_prefix.ahk  install-dev-tools.sh  rename_variable_names.py
tests/: test_errors.cpp  test_test.cpp
